--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,18 +1,23 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  width: 100%; 
+  width: 100%;
   height: 100vh;
   color: rgb(189, 189, 189);
 }
 
+.flexWrapper {
+  display: flex;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.color-white {
+  color: #fff !important;
+}
 /* .App-header {
   min-height: 100vh;
   display: flex;
@@ -34,4 +39,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main_flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* flex-direction: column; */
 }
